<resources>
    <string name="app_name">Bookpratha</string>
    <string name="title_home">Home</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_category">Category</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author:</string>
    <string name="lokramayan">Lokramayan</string>
    <string name="home">Home</string>
</resources>
