<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />



    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_valentines_heart"
        android:title="@string/title_wishlist" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_grid"
        android:title="@string/title_category" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile" />

</menu>
